--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <button id="nav-recipes">Recipes</button>
     <button id="nav-production">Production</button>
     <button id="nav-dashboard">Dashboard</button>
+    <button id="nav-orders">Orders</button>
+    <button id="nav-customers">Customers</button>
   </nav>
   <main>
     <!-- Ingredients Section -->
@@ -31,6 +33,7 @@
         <input type="number" id="ingredient-quantity" required>
         <button type="submit">Save Ingredient</button>
       </form>
+      <div id="low-stock-alert" style="display:none;color:#b30000;background:#fff0f0;padding:10px;border-radius:8px;margin-bottom:10px;"></div>
       <table id="ingredients-table">
         <thead>
           <tr>
@@ -100,9 +103,88 @@
         <input type="file" id="import-file" style="display:none" accept=".json"/>
         <button id="import-data">Import Data</button>
         <button id="reset-data" style="margin-top:20px;background:#ff4080;">Reset All Data</button>
+        <button id="export-report" style="margin-top:20px;background:#80ff80;">Export Monthly Report</button>
       </div>
     </section>
-  </main>
+
+    <!-- Orders Section -->
+    <section id="orders-section" class="section" style="display:none">
+      <h2>Customer Orders 🧾</h2>
+      <form id="order-form">
+        <label for="order-customer">Customer:</label>
+        <select id="order-customer"></select>
+        <div id="order-items-container"></div>
+        <button type="button" id="add-order-item">Add Another Item</button>
+        <button type="submit">Add Order</button>
+      </form>
+      <input type="text" id="order-search" placeholder="Search orders by customer or item..." style="margin:10px 0;width:100%;padding:8px;">
+      <select id="order-status-filter" style="margin:10px 0;">
+        <option value="">All Statuses</option>
+        <option value="Pending">Pending</option>
+        <option value="Fulfilled">Fulfilled</option>
+      </select>
+      <table id="orders-table">
+        <thead>
+          <tr>
+            <th>Customer</th>
+            <th>Item</th>
+            <th>Qty</th>
+            <th>Status</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </section>
+
+    <!-- Customers Section -->
+    <section id="customers-section" class="section" style="display:none">
+      <h2>Customers 👥</h2>
+      <form id="customer-form">
+        <input type="hidden" id="customer-id">
+        <label for="customer-name">Name:</label>
+        <input type="text" id="customer-name" required>
+        <label for="customer-phone">Phone:</label>
+        <input type="text" id="customer-phone">
+        <label for="customer-email">Email:</label>
+        <input type="email" id="customer-email">
+        <button type="submit">Save Customer</button>
+      </form>
+      <table id="customers-table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </section>
+
+    <!-- Staff Section -->
+    <!-- <section id="staff-section" class="section" style="display:none">
+      <h2>Staff 👩‍🍳</h2>
+      <form id="staff-form">
+        <label for="staff-name">Name:</label>
+        <input type="text" id="staff-name" required>
+        <label for="staff-role">Role:</label>
+        <input type="text" id="staff-role" required>
+        <button type="submit">Add Staff</button>
+      </form>
+      <table id="staff-table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Role</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </section>
+  </main> -->
 
   <!-- Modal for production quantity input -->
   <div id="quantity-modal" class="modal" style="display:none">
@@ -111,6 +193,29 @@
       <h2>Enter Quantity to Produce</h2>
       <input type="number" id="production-quantity" min="1" required>
       <button id="calculate-production">Calculate</button>
+    </div>
+  </div>
+
+  <div id="restock-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
+    <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
+      <h3>Restock Ingredient</h3>
+      <div id="restock-modal-name" style="margin-bottom:10px;"></div>
+      <input type="number" id="restock-amount" min="1" value="10" style="width:100%;margin-bottom:10px;">
+      <div style="text-align:right;">
+        <button id="restock-cancel">Cancel</button>
+        <button id="restock-confirm">Restock</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="walkin-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
+    <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
+      <h3>Walk-in Customer Name</h3>
+      <input type="text" id="walkin-name" placeholder="Enter name or leave blank for 'Walk-in'" style="width:100%;margin-bottom:10px;">
+      <div style="text-align:right;">
+        <button id="walkin-cancel">Cancel</button>
+        <button id="walkin-confirm">OK</button>
+      </div>
     </div>
   </div>
 
