--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     <button id="nav-ingredients">Ingredients</button>
     <button id="nav-recipes">Recipes</button>
-    <button id="nav-production">Production</button>
+    <!-- <button id="nav-production">Production</button> -->
     <button id="nav-dashboard">Dashboard</button>
     <button id="nav-orders">Orders</button>
     <button id="nav-customers">Customers</button>
@@ -81,7 +81,7 @@
     </section>
 
     <!-- Production Section -->
-    <section id="production-section" class="section" style="display:none">
+    <!-- <section id="production-section" class="section" style="display:none">
       <h2>Production 🏭</h2>
       <div id="menu-list"></div>
       <div id="production-details" style="display:none">
@@ -90,7 +90,7 @@
         <button id="confirm-production">Confirm Production</button>
         <button id="back-to-production">Back</button>
       </div>
-    </section>
+    </section> -->
 
     <!-- Dashboard Section -->
     <section id="dashboard-section" class="section" style="display:none">
@@ -187,14 +187,14 @@
   </main> -->
 
   <!-- Modal for production quantity input -->
-  <div id="quantity-modal" class="modal" style="display:none">
+  <!-- <div id="quantity-modal" class="modal" style="display:none">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
       <h2>Enter Quantity to Produce</h2>
       <input type="number" id="production-quantity" min="1" required>
       <button id="calculate-production">Calculate</button>
     </div>
-  </div>
+  </div> -->
 
   <div id="restock-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
     <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
