--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Cinnamon Secrets Bakery Management</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
   <div id="toast" class="toast">Saved successfully!</div>
   <header>
@@ -18,6 +20,7 @@
     <button id="nav-dashboard">Dashboard</button>
     <button id="nav-orders">Orders</button>
     <button id="nav-customers">Customers</button>
+    <button id="nav-calendar">Calendar</button>
   </nav>
   <main>
     <!-- Ingredients Section -->
@@ -33,7 +36,8 @@
         <input type="number" id="ingredient-quantity" required>
         <button type="submit">Save Ingredient</button>
       </form>
-      <div id="low-stock-alert" style="display:none;color:#b30000;background:#fff0f0;padding:10px;border-radius:8px;margin-bottom:10px;"></div>
+      <div id="low-stock-alert"
+        style="display:none;color:#b30000;background:#fff0f0;padding:10px;border-radius:8px;margin-bottom:10px;"></div>
       <table id="ingredients-table">
         <thead>
           <tr>
@@ -100,7 +104,7 @@
       <canvas id="money-chart"></canvas>
       <div style="margin: 20px 0;">
         <button id="export-data">Export Data</button>
-        <input type="file" id="import-file" style="display:none" accept=".json"/>
+        <input type="file" id="import-file" style="display:none" accept=".json" />
         <button id="import-data">Import Data</button>
         <button id="reset-data" style="margin-top:20px;background:#ff4080;">Reset All Data</button>
         <button id="export-report" style="margin-top:20px;background:#80ff80;">Export Monthly Report</button>
@@ -113,28 +117,19 @@
       <form id="order-form">
         <label for="order-customer">Customer:</label>
         <select id="order-customer"></select>
-        <div id="order-items-container"></div>
-        <button type="button" id="add-order-item">Add Another Item</button>
-        <button type="submit">Add Order</button>
+        <label for="order-date">Order Date:</label>
+        <input type="date" id="order-date" required value="">
+        <div id="order-items-container">
+          <h3>Order Items</h3>
+          <div id="order-items-list"></div>
+          <button type="button" id="add-order-item">Add Item</button>
+        </div>
+        <button type="submit">Save Order</button>
       </form>
-      <input type="text" id="order-search" placeholder="Search orders by customer or item..." style="margin:10px 0;width:100%;padding:8px;">
-      <select id="order-status-filter" style="margin:10px 0;">
-        <option value="">All Statuses</option>
-        <option value="Pending">Pending</option>
-        <option value="Fulfilled">Fulfilled</option>
-      </select>
-      <table id="orders-table">
-        <thead>
-          <tr>
-            <th>Customer</th>
-            <th>Item</th>
-            <th>Qty</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+      <input type="text" id="order-search" placeholder="Search orders by customer or item..."
+        style="margin:10px 0;width:100%;padding:8px;">
+      <select id="order-status-filter" style="margin:10px 0;"></select>
+      <table id="orders-table"></table>
     </section>
 
     <!-- Customers Section -->
@@ -186,8 +181,8 @@
     </section>
   </main> -->
 
-  <!-- Modal for production quantity input -->
-  <!-- <div id="quantity-modal" class="modal" style="display:none">
+    <!-- Modal for production quantity input -->
+    <!-- <div id="quantity-modal" class="modal" style="display:none">
     <div class="modal-content">
       <span id="close-modal" class="close">&times;</span>
       <h2>Enter Quantity to Produce</h2>
@@ -196,31 +191,50 @@
     </div>
   </div> -->
 
-  <div id="restock-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
-    <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
-      <h3>Restock Ingredient</h3>
-      <div id="restock-modal-name" style="margin-bottom:10px;"></div>
-      <input type="number" id="restock-amount" min="1" value="10" style="width:100%;margin-bottom:10px;">
-      <div style="text-align:right;">
-        <button id="restock-cancel">Cancel</button>
-        <button id="restock-confirm">Restock</button>
+    <div id="restock-modal"
+      style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
+      <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
+        <h3>Restock Ingredient</h3>
+        <div id="restock-modal-name" style="margin-bottom:10px;"></div>
+        <input type="number" id="restock-amount" min="1" value="10" style="width:100%;margin-bottom:10px;">
+        <div style="text-align:right;">
+          <button id="restock-cancel">Cancel</button>
+          <button id="restock-confirm">Restock</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div id="walkin-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
-    <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
-      <h3>Walk-in Customer Name</h3>
-      <input type="text" id="walkin-name" placeholder="Enter name or leave blank for 'Walk-in'" style="width:100%;margin-bottom:10px;">
-      <div style="text-align:right;">
-        <button id="walkin-cancel">Cancel</button>
-        <button id="walkin-confirm">OK</button>
+    <div id="walkin-modal"
+      style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
+      <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
+        <h3>Walk-in Customer Name</h3>
+        <input type="text" id="walkin-name" placeholder="Enter name or leave blank for 'Walk-in'"
+          style="width:100%;margin-bottom:10px;">
+        <div style="text-align:right;">
+          <button id="walkin-cancel">Cancel</button>
+          <button id="walkin-confirm">OK</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script src="data.js"></script>
-  <script src="renderer.js"></script>
-  <script src="charts.js"></script>
+    <!-- Calendar Section -->
+    <section id="calendar-section" class="section" style="display:none">
+      <h2>Calendar 📅</h2>
+      <div id="calendar-controls" style="display:flex;align-items:center;gap:10px;margin-bottom:10px;">
+        <button id="calendar-prev">&lt;</button>
+        <span id="calendar-month-year" style="font-weight:bold;"></span>
+        <button id="calendar-next">&gt;</button>
+      </div>
+      <table id="calendar-table" style="width:100%;max-width:500px;margin:auto;margin-bottom:20px;"></table>
+      <div id="calendar-orders-list">
+        <h3>Orders for <span id="calendar-selected-date"></span></h3>
+        <ul id="calendar-orders-ul" style="list-style:none;padding:0;"></ul>
+      </div>
+    </section>
+
+    <script src="data.js"></script>
+    <script src="renderer.js"></script>
+    <script src="charts.js"></script>
 </body>
+
 </html>
