--- a/index.html
+++ b/index.html
@@ -18,27 +18,20 @@
     <button id="nav-dashboard">Dashboard</button>
     <button id="nav-orders">Orders</button>
     <button id="nav-customers">Customers</button>
+    <button id="nav-calendar">Calendar</button>
   </nav>
   <main>
     <!-- Ingredients Section -->
     <section id="ingredients-section" class="section">
       <h2>Ingredients 🥣</h2>
-      <form id="ingredient-form">
-        <input type="hidden" id="ingredient-id">
-        <label for="ingredient-name">Name:</label>
-        <input type="text" id="ingredient-name" required>
-        <label for="ingredient-price">Price per unit:</label>
-        <input type="number" id="ingredient-price" step="0.01" required>
-        <label for="ingredient-quantity">Quantity In Stock:</label>
-        <input type="number" id="ingredient-quantity" required>
-        <button type="submit">Save Ingredient</button>
-      </form>
+      <button id="add-ingredient-btn">Add Ingredient</button>
       <div id="low-stock-alert" style="display:none;color:#b30000;background:#fff0f0;padding:10px;border-radius:8px;margin-bottom:10px;"></div>
       <table id="ingredients-table">
         <thead>
           <tr>
             <th>Name</th>
-            <th>Price</th>
+            <th>Unit</th>
+            <th>Price/unit</th>
             <th>Quantity</th>
             <th>Actions</th>
           </tr>
@@ -47,30 +40,57 @@
       </table>
     </section>
 
+    <!-- Ingredient Modal (Add/Edit) -->
+    <div id="ingredient-modal" class="modal" style="display:none">
+      <div class="modal-content">
+        <span id="close-ingredient-modal" class="close">&times;</span>
+        <h2 id="ingredient-modal-title">Add/Edit Ingredient</h2>
+        <form id="ingredient-modal-form">
+          <input type="hidden" id="ingredient-id">
+          <label for="ingredient-name">Name</label>
+          <input type="text" id="ingredient-name" required>
+          <label for="ingredient-quantity">Quantity</label>
+          <input type="number" id="ingredient-quantity" min="0" required>
+          <label for="ingredient-unit">Unit</label>
+          <input type="text" id="ingredient-unit" placeholder="e.g. kg, g, L, pcs">
+          <label for="ingredient-price">Price per Unit ($)</label>
+          <input type="number" id="ingredient-price" min="0" step="0.01" required>
+          <div style="text-align:right;margin-top:10px;">
+            <button type="submit" id="save-ingredient-modal-btn">Save Ingredient</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <!-- Confirmation Modal -->
+    <div id="confirm-modal" class="modal" style="display:none">
+      <div class="modal-content">
+        <span id="close-confirm-modal" class="close">&times;</span>
+        <h2 id="confirm-modal-title">Are you sure?</h2>
+        <p id="confirm-modal-message"></p>
+        <button id="confirm-modal-yes">Yes</button>
+        <button id="confirm-modal-no">No</button>
+      </div>
+    </div>
+
+    <!-- Loading Modal -->
+    <div id="loading-modal" class="modal" style="display:none;align-items:center;justify-content:center;">
+      <div class="modal-content" style="text-align:center;">
+        <div class="loader"></div>
+        <p>Loading...</p>
+      </div>
+    </div>
+
     <!-- Recipes Section -->
     <section id="recipes-section" class="section" style="display:none">
       <h2>Recipes 🍪</h2>
-      <form id="menu-form">
-        <input type="hidden" id="menu-id">
-        <label for="menu-name">Item Name:</label>
-        <input type="text" id="menu-name" required>
-        <label for="menu-recipe">Recipe/Instructions:</label>
-        <textarea id="menu-recipe" required></textarea>
-        <div id="menu-ingredients-container">
-          <h3>Ingredients Required</h3>
-        </div>
-        <button type="button" id="add-menu-ingredient">Add Ingredient</button>
-        <label for="menu-price">Price You Charge:</label>
-        <input type="number" id="menu-price" step="0.01" required>
-        <p id="menu-cost-display">Cost to Make: $0.00</p>
-        <button type="submit">Save Recipe</button>
-      </form>
+      <button id="add-recipe-btn">Add Recipe</button>
       <table id="menu-table">
         <thead>
           <tr>
-            <th>Item Name</th>
+            <th>Name</th>
             <th>Ingredients</th>
-            <th>Recipe</th>
+            <th>Instructions</th>
             <th>Cost</th>
             <th>Price</th>
             <th>Actions</th>
@@ -80,13 +100,40 @@
       </table>
     </section>
 
+    <!-- Recipe Modal (Add/Edit) -->
+    <div id="recipe-modal" class="modal" style="display:none">
+      <div class="modal-content">
+        <span id="close-recipe-modal" class="close">&times;</span>
+        <h2 id="recipe-modal-title">Add/Edit Recipe</h2>
+        <form id="recipe-modal-form">
+          <input type="hidden" id="recipe-modal-id">
+          <label for="recipe-modal-name">Recipe Name</label>
+          <input type="text" id="recipe-modal-name" required>
+          <label for="recipe-modal-instructions">Instructions</label>
+          <textarea id="recipe-modal-instructions" name="recipe-modal-instructions" rows="3" required></textarea>
+          <div id="recipe-modal-ingredients-container">
+            <h3>Ingredients Required</h3>
+          </div>
+          <button type="button" id="add-recipe-modal-ingredient" style="margin:8px 0;">Add Ingredient</button>
+          <label for="recipe-modal-price"><br>Price ($)</label>
+          <input type="number" id="recipe-modal-price" min="0" step="0.01" required>
+          <div id="recipe-modal-cost-display" style="margin:8px 0;">Cost to Make: $0.00</div>
+          <div style="text-align:right;margin-top:10px;">
+            <button type="submit" id="save-recipe-modal-btn">Save Recipe</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <!-- Production Section -->
     <section id="production-section" class="section" style="display:none">
       <h2>Production 🏭</h2>
       <div id="menu-list"></div>
+      <div id="unproduced-orders-list"></div>
       <div id="production-details" style="display:none">
-        <h3>Production Details</h3>
-        <p id="production-info"></p>
+        <h3>Order Details</h3>
+        <p id="production-order-info"></p>
+        <div id="production-recipe-info"></div>
         <button id="confirm-production">Confirm Production</button>
         <button id="back-to-production">Back</button>
       </div>
@@ -95,9 +142,12 @@
     <!-- Dashboard Section -->
     <section id="dashboard-section" class="section" style="display:none">
       <h2>Dashboard 📊</h2>
-      <canvas id="ingredient-chart"></canvas>
-      <canvas id="recipe-chart"></canvas>
-      <canvas id="money-chart"></canvas>
+      <div class="dashboard-charts">
+        <div class="dashboard-chart"><canvas id="ingredient-chart"></canvas></div>
+        <div class="dashboard-chart"><canvas id="recipe-chart"></canvas></div>
+        <div class="dashboard-chart"><canvas id="money-chart"></canvas></div>
+        <div class="dashboard-chart"><canvas id="ingredient-usage-chart"></canvas></div>
+      </div>
       <div style="margin: 20px 0;">
         <button id="export-data">Export Data</button>
         <input type="file" id="import-file" style="display:none" accept=".json"/>
@@ -117,19 +167,24 @@
         <button type="button" id="add-order-item">Add Another Item</button>
         <button type="submit">Add Order</button>
       </form>
-      <input type="text" id="order-search" placeholder="Search orders by customer or item..." style="margin:10px 0;width:100%;padding:8px;">
+      <input type="text" id="order-search" placeholder="Search orders by customer, item, or date..." style="margin:10px 0;width:100%;padding:8px;">
       <select id="order-status-filter" style="margin:10px 0;">
         <option value="">All Statuses</option>
         <option value="Pending">Pending</option>
+        <option value="Produced">Produced</option>
         <option value="Fulfilled">Fulfilled</option>
       </select>
       <table id="orders-table">
         <thead>
           <tr>
+            <th>Date</th>
             <th>Customer</th>
             <th>Item</th>
             <th>Qty</th>
+            <th>Total</th>
             <th>Status</th>
+            <th>Produced?</th>
+            <th>Pickup Date</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -137,9 +192,32 @@
       </table>
     </section>
 
+    <!-- Edit Order Modal -->
+    <div id="edit-order-modal" class="modal" style="display:none">
+      <div class="modal-content">
+        <span id="close-edit-order-modal" class="close">&times;</span>
+        <h2>Edit Order</h2>
+        <form id="edit-order-form">
+          <input type="hidden" id="edit-order-id">
+          <label>Customer:
+            <select id="edit-order-customer-select" required></select>
+            <input type="text" id="edit-order-customer-name" placeholder="Enter name or leave blank for Walk-in" style="display:none;margin-top:5px;">
+          </label><br>
+          <label>Pickup Date:
+            <input type="date" id="edit-order-pickup-date" required>
+            <span style="font-size:0.9em;color:#888;">(Must be at least 48 hours from now)</span>
+          </label><br>
+          <div id="edit-order-items-container"></div>
+          <button type="button" id="edit-add-order-item">Add Another Item</button>
+          <button type="submit">Save Changes</button>
+        </form>
+      </div>
+    </div>
+
     <!-- Customers Section -->
     <section id="customers-section" class="section" style="display:none">
       <h2>Customers 👥</h2>
+      <input type="text" id="customer-search" placeholder="Search customers by name, phone, or email..." style="margin:10px 0;width:100%;padding:8px;">
       <form id="customer-form">
         <input type="hidden" id="customer-id">
         <label for="customer-name">Name:</label>
@@ -163,28 +241,12 @@
       </table>
     </section>
 
-    <!-- Staff Section -->
-    <!-- <section id="staff-section" class="section" style="display:none">
-      <h2>Staff 👩‍🍳</h2>
-      <form id="staff-form">
-        <label for="staff-name">Name:</label>
-        <input type="text" id="staff-name" required>
-        <label for="staff-role">Role:</label>
-        <input type="text" id="staff-role" required>
-        <button type="submit">Add Staff</button>
-      </form>
-      <table id="staff-table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Role</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+    <!-- Calendar Section -->
+    <section id="calendar-section" class="section" style="display:none">
+      <h2>Calendar 📅</h2>
+      <div id="calendar-view"></div>
     </section>
-  </main> -->
+  </main>
 
   <!-- Modal for production quantity input -->
   <div id="quantity-modal" class="modal" style="display:none">
@@ -196,25 +258,25 @@
     </div>
   </div>
 
-  <div id="restock-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
-    <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
+  <div id="restock-modal" class="modal" style="display:none;align-items:center;justify-content:center;z-index:1000;">
+    <div class="modal-content">
       <h3>Restock Ingredient</h3>
       <div id="restock-modal-name" style="margin-bottom:10px;"></div>
       <input type="number" id="restock-amount" min="1" value="10" style="width:100%;margin-bottom:10px;">
       <div style="text-align:right;">
-        <button id="restock-cancel">Cancel</button>
         <button id="restock-confirm">Restock</button>
+        <button id="restock-cancel">Cancel</button>
       </div>
     </div>
   </div>
 
-  <div id="walkin-modal" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.4);align-items:center;justify-content:center;z-index:1000;">
-    <div style="background:#fff;padding:24px;border-radius:10px;min-width:300px;box-shadow:0 2px 12px #0003;">
+  <div id="walkin-modal" class="modal" style="display:none;align-items:center;justify-content:center;z-index:1000;">
+    <div class="modal-content">
       <h3>Walk-in Customer Name</h3>
       <input type="text" id="walkin-name" placeholder="Enter name or leave blank for 'Walk-in'" style="width:100%;margin-bottom:10px;">
       <div style="text-align:right;">
-        <button id="walkin-cancel">Cancel</button>
         <button id="walkin-confirm">OK</button>
+        <button id="walkin-cancel">Cancel</button>
       </div>
     </div>
   </div>
